Checking in changes prior to tagging of version 0.01.
Changelog diff is:

diff --git a/Changes b/Changes
index 4cf0d74..3cf9425 100644
--- a/Changes
+++ b/Changes
@@ -1,6 +1,2 @@
-Revision history for Perl extension MogileFS::Plugin::FileRefs.
-
-0.01  Thu Oct  4 11:47:43 2012
-	- original version; created by h2xs 1.23 with options
-		-X MogileFS::Plugin::FileRefs
-
+0.01
+    - Initial release.
diff --git a/debian/changelog b/debian/changelog
index e1ac365..795c629 100644
--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 libmogilefs-plugin-filerefs-perl (0.01) unstable; urgency=low

-  * Initial Release.
+  * Initial release.

- -- Dave Lambley <davel@state51.co.uk>  Fri, 5 Oct 2012 13:48:01 +0000
+ -- Dave Lambley <davel@state51.co.uk>  Fri, 05 Oct 2012 13:56:49 +0000

--- a/Changes
+++ b/Changes
@@ -1,6 +1,2 @@
-Revision history for Perl extension MogileFS::Plugin::FileRefs.
-
-0.01  Thu Oct  4 11:47:43 2012
-	- original version; created by h2xs 1.23 with options
-		-X MogileFS::Plugin::FileRefs
-
+0.01
+    - Initial release.
