--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 libmogilefs-plugin-filerefs-perl (0.01) unstable; urgency=low
 
-  * Initial Release.
+  * Initial release.
 
- -- Dave Lambley <davel@state51.co.uk>  Fri, 5 Oct 2012 13:48:01 +0000
+ -- Dave Lambley <davel@state51.co.uk>  Fri, 05 Oct 2012 13:56:49 +0000
