Checking in changes prior to tagging of version 0.04.
Changelog diff is:

diff --git a/Changes b/Changes
index 420c462..d58436a 100644
--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.04
+    - Get made_new_ref return value correct.
+    - Munge arguments to work with Mogile::Client without poking around in
+      it's internals.
+
 0.03
     - Fix up domain argument.

diff --git a/debian/changelog b/debian/changelog
index 3c0e1b4..07db7a4 100644
--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmogilefs-plugin-filerefs-perl (0.04) lucid; urgency=low
+
+  * Get made_new_ref return value correct.
+  * Munge arguments to work with Mogile::Client without poking around in
+    it's internals.
+
+ -- Dave Lambley <davel@state51.co.uk>  Mon, 15 Oct 2012 14:20:20 +0000
+
 libmogilefs-plugin-filerefs-perl (0.03) lucid; urgency=low

   * Fix up domain argument.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libmogilefs-plugin-filerefs-perl (0.04) lucid; urgency=low
+
+  * Get made_new_ref return value correct.
+  * Munge arguments to work with Mogile::Client without poking around in
+    it's internals.
+
+ -- Dave Lambley <davel@state51.co.uk>  Mon, 15 Oct 2012 14:20:20 +0000
+
 libmogilefs-plugin-filerefs-perl (0.03) lucid; urgency=low
 
   * Fix up domain argument.
