--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.04
+    - Get made_new_ref return value correct.
+    - Munge arguments to work with Mogile::Client without poking around in
+      it's internals.
+
 0.03
     - Fix up domain argument.
 
