--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.05
+    - Make locks low priority, but we still block on them.
+
 0.04
     - Get made_new_ref return value correct.
     - Munge arguments to work with Mogile::Client without poking around in
