--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmogilefs-plugin-filerefs-perl (0.05) lucid; urgency=low
+
+  * Make locks low priority, but we still block on them.
+
+ -- Dave Lambley <davel@state51.co.uk>  Tue, 06 Nov 2012 13:22:34 +0000
+
 libmogilefs-plugin-filerefs-perl (0.04) lucid; urgency=low
 
   * Get made_new_ref return value correct.
@@ -10,7 +16,7 @@ libmogilefs-plugin-filerefs-perl (0.03) lucid; urgency=low
 
   * Fix up domain argument.
 
- -- Dave Lambley <davel@square.state51.co.uk>  Mon, 08 Oct 2012 15:29:06 +0000
+ -- Dave Lambley <davel@state51.co.uk>  Mon, 08 Oct 2012 15:29:06 +0000
 
 libmogilefs-plugin-filerefs-perl (0.02) lucid; urgency=low
 
