--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+    - Avoid using a full table lock, stick to application locks instead.
+
 0.05
     - Make locks low priority, but we still block on them.
 
