Checking in changes prior to tagging of version 0.06.
Changelog diff is:

diff --git a/Changes b/Changes
index 2a9cdce..37be115 100644
--- a/Changes
+++ b/Changes
@@ -1,3 +1,4 @@
+0.06
     - Avoid using a full table lock, stick to application locks instead.

 0.05
diff --git a/debian/changelog b/debian/changelog
index 2575854..a730c78 100644
--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+libmogilefs-plugin-filerefs-perl (0.06) lucid; urgency=low
+
+  * Avoid using a full table lock, stick to application locks instead.
+
+ -- Dave Lambley <davel@square.state51.co.uk>  Fri, 16 Nov 2012 15:42:27 +0000
+
 libmogilefs-plugin-filerefs-perl (0.05) lucid; urgency=low

   * Make locks low priority, but we still block on them.

- -- Dave Lambley <davel@state51.co.uk>  Tue, 06 Nov 2012 13:22:34 +0000
+ -- Dave Lambley <davel@state51.co.uk>  Fri, 16 Nov 2012 15:42:19 +0000

 libmogilefs-plugin-filerefs-perl (0.04) lucid; urgency=low

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
+libmogilefs-plugin-filerefs-perl (0.06) lucid; urgency=low
+
+  * Avoid using a full table lock, stick to application locks instead.
+
+ -- Dave Lambley <davel@square.state51.co.uk>  Fri, 16 Nov 2012 15:42:27 +0000
+
 libmogilefs-plugin-filerefs-perl (0.05) lucid; urgency=low
 
   * Make locks low priority, but we still block on them.
 
- -- Dave Lambley <davel@state51.co.uk>  Tue, 06 Nov 2012 13:22:34 +0000
+ -- Dave Lambley <davel@state51.co.uk>  Fri, 16 Nov 2012 15:42:19 +0000
 
 libmogilefs-plugin-filerefs-perl (0.04) lucid; urgency=low
 
