Checking in changes prior to tagging of version 0.07.
Changelog diff is:

diff --git a/Changes b/Changes
index 37be115..fee6d54 100644
--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.07
+    - Add resources to distribution metadata.
+
 0.06
     - Avoid using a full table lock, stick to application locks instead.

diff --git a/debian/changelog b/debian/changelog
index a730c78..d83bace 100644
--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libmogilefs-plugin-filerefs-perl (0.07) lucid; urgency=low
+
+  * Add resources to distribution metadata.
+
+ -- Dave Lambley <davel@state51.co.uk>  Fri, 08 Feb 2013 12:52:27 +0000
+
 libmogilefs-plugin-filerefs-perl (0.06) lucid; urgency=low

   * Avoid using a full table lock, stick to application locks instead.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.07
+    - Add resources to distribution metadata.
+
 0.06
     - Avoid using a full table lock, stick to application locks instead.
 
