--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.09
+    - Tweak to avoid upsetting CPAN indexer.
+
 0.08
     - Update to build against modern MogileFS::Server.
     - Switch to Dist::Zilla.
